--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul class="menu">
                     <li><a class="yellow" href="#">Главная</a></li>
                     <li><a href="#">Экскурсии</a></li>
-                    <li><a href="#">Личный кабинет</a></li>
+                    <li><a href="registration.html">Личный кабинет</a></li>
                 </ul>
             </header>
 
@@ -40,8 +40,8 @@
 
     <section class="promo_2">
         <h2>Популярные экскурсии</h2>
-      
-        <div class="container_2">
+
+        <div class="container">
             <div class="Bus_tour">
                 <div class="transport">
                     Автобусный тур
@@ -88,68 +88,161 @@
 
 
                 <div class="time">
-                    <p> 
+                    <p>
                         <img src="img/Vector.png" alt="">
                         1,5 часа
                     </p>
                 </div>
 
                 <div class="coin">
-                    <p>  <img src="img/coin.png" alt="">
+                    <p> <img src="img/coin.png" alt="">
                         1 809 ₽ </p>
                 </div>
 
                 <div class="information">
-                    <p>Конные прогулки проходят в Лазурной долине. С долины открывается красивый вид на море, горы и лес. На всем пути следования экскурсии вас будут сопровождать опытные инструктора. Катание на лошадях или иппотерапия очень полезна для детей и взрослых...</p>
+                    <p>Конные прогулки проходят в Лазурной долине. С долины открывается красивый вид на море, горы и
+                        лес. На всем пути следования экскурсии вас будут сопровождать опытные инструктора. Катание на
+                        лошадях или иппотерапия очень полезна для детей и взрослых...</p>
                 </div>
                 <a class="button" href="#">Подробнее</a>
             </div>
 
-<div class="Dragons_mouth">
-    <div class="transport">
-        <p>Квадротур</p>
-    </div>
+            <div class="Dragons_mouth">
+                <div class="transport">
+                    <p>Квадротур</p>
+                </div>
 
-    <div class="place">
-        <p>Пасть дракона</p>
-    </div>
+                <div class="place">
+                    <p>Пасть дракона</p>
+                </div>
 
-    <div class="time">
-        <p> 
-            <img src="img/Vector.png" alt="">
-            2,5 часа
-        </p>
-</div>
+                <div class="time">
+                    <p>
+                        <img src="img/Vector.png" alt="">
+                        2,5 часа
+                    </p>
+                </div>
 
-<div class="coin">
-    <p>  <img src="img/coin.png" alt="">
-        3 515 ₽ </p>
-</div>
+                <div class="coin">
+                    <p> <img src="img/coin.png" alt="">
+                        3 515 ₽ </p>
+                </div>
 
-<div class="information">
-    Маршрут на Квадроциклах проходит по горной реке Мзымта вдоль белых скал и самшитовый лес к водопаду Глубокий Яр или "Пасть Дракона" (экскурсионное название).
-Высота водопада 41,5 метр - это один из самых высоких водопадов Большого Сочи...
-</div>
-      
-<a class="button" href="#">Подробнее</a>
+                <div class="information">
+                    Маршрут на Квадроциклах проходит по горной реке Мзымта вдоль белых скал и самшитовый лес к водопаду
+                    Глубокий Яр или "Пасть Дракона" (экскурсионное название).
+                    Высота водопада 41,5 метр - это один из самых высоких водопадов Большого Сочи...
+                </div>
 
-        </div>
+                <a class="button" href="#">Подробнее</a>
+
+            </div>
     </section>
 
     <section class="promo_3">
-        <div class="container_3">
-<div class="travel">
-    <p>О нас</p>
-</div>
+        <div class="container">
+            <div class="travel">
+                <p>О нас</p>
+            </div>
 
-<div class="information_2">
-    <p>PeroTravel - Первый онлайн-сервис по бронированию экскурсий без очередей и операторов.
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-        <br> 
-        <br>
-        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.  </p>
-</div>
+            <div class="information_2">
+                <p>PeroTravel - Первый онлайн-сервис по бронированию экскурсий без очередей и операторов.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                    aliquip ex ea commodo consequat. </p>
+                <br>
+                <br>
+                <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
+                    totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae
+                    dicta sunt explicabo. </p>
+            </div>
         </div>
+    </section>
+
+
+
+    <section class="promo_4">
+        <div class="container">
+            <h3>Виды экскурсий</h3>
+
+            <div class="bus">
+                <img class="tour_img" src="img/bus.png" alt="">
+            </div>
+            <div class="Bus_1">Автобусный тур</div>
+
+            <div class="bus_2">Один из самых насыщенных впечатлениями, доступных по цене и популярных видов
+                отдыха. Во время одной поездки можно посмотреть достопримечательности сразу нескольких городов, причем
+                обойдется это едва ли не в разы дешевле классического экскурсионного тура с ночевками в отелях.</div>
+        </div>
+
+
+        <div class="yacht">
+            <img class="yacht_img" src="img/yacht.png" alt="">
+        </div>
+
+        <div class="yatch_1">
+            Яхтинг
+        </div>
+
+        <div class="yatch_2">
+            Это то же, что круиз на лайнере или прогулка на пароме, только на яхте больше свободы, размеры судна в разы
+            меньше, нет назойливой команды, можно самостоятельно почувствовать себя капитаном, постоять за штурвалом.
+            Именно здесь вы почувствуете величайшие просторы Черногор моря.
+        </div>
+
+        <div class="jeep">
+            <img src="img/car.png" alt="">
+        </div>
+
+        <div class="jeep_1">
+            Джиппинг
+        </div>
+
+
+        <div class="jeep_2">
+            Это путешествие на автомобилях высокой проходимости с преодолением естественных препятствий, это
+            экстремальный вид спорта и отдыха, представляющий собой прохождение туристического маршрута по бездорожью на
+            автомобилях.
+        </div>
+
+
+
+        <div class="mountain">
+            <img src="img/mountain.png" alt="">
+        </div>
+
+        <div class="mountain_2">
+            Каньонинг
+        </div>
+
+        <div class="mountain_3">
+            Это экстремально-спортивный вид отдыха, который заключается в преодолении каньонов (обводненных или нет) при
+            помощи альпинистского и иного снаряжения, а иногда и вброд, но без лодок или иных плавсредств.
+        </div>
+
+
+        <div class="choose">
+            Выбирайте на нашем сайте экскурсию, которая подходит именно вам и записывайтесь онлайн без очередей, просто
+            и быстро!
+        </div>
+
+
+        <p><a class="promo_btn" href="">
+                <p class="promo_btn_a"> К экскурсиям<img src="img/Arrow 1.png" alt="">
+            </a>
+
+    </section>
+
+
+    <section class="promo_4">
+<div class="img_1"></div>
+<div class="img_2"></div>
+<div class="img_3"><img src="img/3.png" alt=""></div>
+<div class="img_4"></div>
+<div class="img_5"></div>
+<div class="img_6"></div>
+<div class="img_7"></div>
+<div class="img_8"></div>
     </section>
 
 </body>
